# libpkgbuild

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  libpkgbuild.cpp  libpkgbuild.hpp
test/: CMakeLists.txt  main.cpp
